--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Webjob</title>
+    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png">
+    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png">
+    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png">
+    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/Styles.css">
