--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Webjob</title>
-    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png">
-    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png" media="(prefers-color-scheme: dark)">
-    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png">
-    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png">
-    <link rel="icon" type="image/png" sizes="2084x2084" href="assets/img/Ligma%20Logo_Mesa%20de%20trabajo%201.png">
+    <title>Untitled</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/Styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body><!DOCTYPE html>
@@ -22,7 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sigma FX - Soluciones Tecnológicas</title>
-    <link rel="stylesheet" href="assets/css/Styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ">
 </head>
 <body>
@@ -153,7 +147,7 @@
         </div>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer
     <footer class="footer-panel">
         <h2>Contacto</h2>
         <p><i class="fas fa-map-marker-alt"></i> Challapata, Avenida Germán Busch entre Murillo Dorado y Ejército</p>
@@ -173,7 +167,13 @@
     <!-- Script -->
     <script src="script.js"></script>
 </body>
-</html>
+</html><footer class="footer-panel">
+    <h2>Contacto</h2>
+    <p><i class="fas fa-map-marker-alt"></i> Challapata, Avenida Germán Busch entre Murillo Dorado y Ejército</p>
+    <p><i class="fas fa-clock"></i> Atención: Sábados y Domingos de 09:00 a 17:00</p>
+    <p><i class="fas fa-phone"></i> <a href="tel:+59163642087" class="phone-link">Celular: 63642087</a></p>
+    <div class="counter" id="visitorCounter">Cargando visitas...</div>
+</footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/scripts.js"></script>
 </body>
