--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
+    <title>PROMO Sigma FX1</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -172,8 +172,11 @@
     <p><i class="fas fa-map-marker-alt"></i> Challapata, Avenida Germán Busch entre Murillo Dorado y Ejército</p>
     <p><i class="fas fa-clock"></i> Atención: Sábados y Domingos de 09:00 a 17:00</p>
     <p><i class="fas fa-phone"></i> <a href="tel:+59163642087" class="phone-link">Celular: 63642087</a></p>
-    <div class="counter" id="visitorCounter">Cargando visitas...</div>
-</footer>
+<!-- Contador de Visitas -->
+<div class="visitor-counter">
+    <i class="fas fa-eye"></i>
+    <span id="visitorCount">0</span> visitas únicas
+</div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/scripts.js"></script>
 </body>
